plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.foodcourt'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

ext {
	set('springdoc-openapi.version', "2.5.0")
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springdoc:springdoc-openapi:${property('springdoc-openapi.version')}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Configuración de JaCoCo
jacoco {
	toolVersion = "0.8.12"
}

// Tarea para generar el reporte después de correr los tests
tasks.named('jacocoTestReport', JacocoReport) {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
	}
}

// Tarea para verificar que se cumple la cobertura mínima
tasks.named('jacocoTestCoverageVerification', JacocoCoverageVerification) {
	dependsOn tasks.named('jacocoTestReport')
	violationRules {
		rule {
			element = 'PACKAGE'
			// Apunta específicamente al paquete que queremos medir
			includes = ['com.foodcourt.user_service.domain.*']

			// Define los límites de cobertura
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.80 // Exige un mínimo de 80% (0.8)
			}
		}
	}
}

// Le decimos a la tarea 'build' que también debe verificar la cobertura
tasks.named('build') {
	dependsOn tasks.named('jacocoTestCoverageVerification')
}
